--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/addons/p5.sound.min.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="UTF-8" />
-
+<meta charset="UTF-8">
   </head>
   <body>
+        <script src="p5.sound.min.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="sketch.js"></script>
   </body>
 </html>
