--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-        <script src="p5.sound.min.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="p5.sound.min.js"></script>
+   <script src="p5.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
